cmake_minimum_required(VERSION 2.8.12)
project(lab7)

add_library(common common.c)
add_executable(truck truck.c common.c)
add_executable(loader loader.c common.c)

target_link_libraries(loader common)
find_library(LIBRT rt)
if(LIBRT)
    target_link_libraries(truck ${LIBRT})
    target_link_libraries(loader ${LIBRT})
endif()
find_library(LIBPT pthread)
if(LIBPT)
    target_link_libraries(truck ${LIBPT})
    target_link_libraries(loader ${LIBPT})
endif()
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
set(CMAKE_C_FLAGS_RELEASE "-O2")
